// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<space> demo: render [align] correctly 1`] = `
"<div>
  <div style=\\"margin-bottom: 20px;\\"><span class=\\"mb-radio-group-button mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"start\\"><span class=\\"mb-radio-button-content\\">start</span></label><label class=\\"mb-radio-button mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"center\\"><span class=\\"mb-radio-button-content\\">center</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"end\\"><span class=\\"mb-radio-button-content\\">end</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"baseline\\"><span class=\\"mb-radio-button-content\\">baseline</span></label></span></div>
  <div class=\\"mb-space mb-space-horizontal mb-space-align-center\\" style=\\"padding: 10px;\\">
    <div class=\\"mb-space-item\\" style=\\"margin-right: 8px;\\"><span class=\\"mb-typography\\">Space:<!----><!--v-if--><!--v-if--><!--v-if--></span></div>
    <div class=\\"mb-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Item2
      </button></div>
    <div class=\\"mb-space-item\\">
      <div class=\\"mb-card mb-card-size-medium mb-card-bordered\\">
        <div class=\\"mb-card-header\\">
          <div class=\\"mb-card-header-title\\">Card</div>
          <!---->
        </div>
        <!---->
        <div class=\\"mb-card-body\\"> Card content
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<space> demo: render [basic] correctly 1`] = `
"<div class=\\"mb-space mb-space-horizontal mb-space-align-center\\">
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px;\\"><span class=\\"mb-typography\\">Space:<!----><!--v-if--><!--v-if--><!--v-if--></span></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item1
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item2
    </button></div>
  <div class=\\"mb-space-item\\"><button type=\\"button\\" role=\\"switch\\" aria-checked=\\"true\\" class=\\"mb-switch mb-switch-type-circle mb-switch-checked\\"><span class=\\"mb-switch-handle\\"><span class=\\"mb-switch-handle-icon\\"></span></span><!--  prettier-ignore  -->
      <!--v-if-->
    </button></div>
</div>"
`;

exports[`<space> demo: render [size] correctly 1`] = `
"<div>
  <div style=\\"margin-bottom: 20px;\\"><span class=\\"mb-radio-group-button mb-radio-group-size-undefined mb-radio-group-direction-horizontal\\"><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"mini\\"><span class=\\"mb-radio-button-content\\">mini</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"small\\"><span class=\\"mb-radio-button-content\\">small</span></label><label class=\\"mb-radio-button mb-radio-checked\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"medium\\"><span class=\\"mb-radio-button-content\\">medium</span></label><label class=\\"mb-radio-button\\"><input type=\\"radio\\" class=\\"mb-radio-target\\" value=\\"large\\"><span class=\\"mb-radio-button-content\\">large</span></label></span></div>
  <div class=\\"mb-space mb-space-horizontal mb-space-align-center\\">
    <div class=\\"mb-space-item\\" style=\\"margin-right: 16px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Item1
      </button></div>
    <div class=\\"mb-space-item\\" style=\\"margin-right: 16px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Item2
      </button></div>
    <div class=\\"mb-space-item\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
        <!--v-if-->Item3
      </button></div>
  </div>
</div>"
`;

exports[`<space> demo: render [vertical] correctly 1`] = `
"<div class=\\"mb-space mb-space-vertical mb-space-fill\\">
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal mb-btn-long\\" type=\\"button\\">
      <!--v-if-->Item1
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal mb-btn-long\\" type=\\"button\\">
      <!--v-if-->Item2
    </button></div>
  <div class=\\"mb-space-item\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal mb-btn-long\\" type=\\"button\\">
      <!--v-if-->Item3
    </button></div>
</div>"
`;

exports[`<space> demo: render [wrap] correctly 1`] = `
"<div class=\\"mb-space mb-space-horizontal mb-space-align-center mb-space-wrap\\">
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item1
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item2
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item3
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item4
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item5
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item6
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item7
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item8
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item9
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item10
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item11
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item12
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item13
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item14
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item15
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item16
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item17
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item18
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-right: 8px; margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item19
    </button></div>
  <div class=\\"mb-space-item\\" style=\\"margin-bottom: 8px;\\"><button class=\\"mb-btn mb-btn-primary mb-btn-shape-square mb-btn-size-medium mb-btn-status-normal\\" type=\\"button\\">
      <!--v-if-->Item20
    </button></div>
</div>"
`;
